--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
     "version": 2,
     "builds": [
       {
-        "src": "server/index.js",
-        "use": "@vercel/node"
+        "src": "/(.*)",
+        "use": "@vercel/build"
       }
     ],
     "routes": [
